site/content/xap/10.0/dev-java/mongodb.markdown
---
type: post100
title:  MongoDB Integration
categories: XAP100
parent: big-data.html
weight: 300
---


[MongoDB](http://www.mongodb.com/) is an open-source database used by companies of all sizes, across all industries and for a wide variety of applications. It is an agile database that allows schemas to change quickly as applications evolve, while still providing the functionality developers expect from traditional databases, such as secondary indexes, a full query language and strict consistency.

MongoDB is built for scalability, performance and high availability, scaling from single server deployments to large, complex multi-site architectures. By leveraging in-memory computing, MongoDB provides high performance for both reads and writes. MongoDB's native replication and automated failover enable enterprise-grade reliability and operational flexibility.



<br>

{{%fpanel%}}
[Space Persistence](./mongodb-space-persistency.html){{<wbr>}}
A MongoDB Space Persistency Solution

[Archive Handler](./mongodb-archive-operation-handler.html){{<wbr>}}
Archives space objects to MongoDB.

{{%/fpanel%}}

